tests/valid/ListAccess_Valid_4.wys
function f(string str) => [char]:
    [char] r = []
    for i in 0..|str|:
        r = r ++ [str[i]]
    return r

function main() => void:
    [char] r = f("Hello")
    print r

